@@ -103,6 +103,7 @@
                         --add-opens java.base/java.nio.charset=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util.stream=ALL-UNNAMED
+                        --add-exports java.base/java.util.stream=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
